2002-01-24  Markus Bertheau <twanger@bluetwanger.de>

	* mahjongg.c:
	1. new game and restart game dont cause the game to exit anymore
	2. prefs dialog, tile background initial selection reflects current
	setting
	4. remove "make it default"'s
	6. remove old properties_callback

2002-01-20  Josh Barrow  <drleary@mac.com>

	* Makefile.am:
	Set *_DISABLE_DEPRECATED in the Makefile.am
	* gnome-canvas-pimage.c:
	undef all of the *_DISABLE_DEPRECATED stuff in this file
	becuase I don't want to mess with porting it right now.
	Perhaps we should just use the normal canvas?

2002-01-09  Juan Pablo Mendoza <jpablo@gnome.org>

	Markus Bertheau <twanger@bluetwanger.de>

	* mahjongg.c: Fixed the exit logic.

2002-01-09  Juan Pablo Mendoza <jpablo@gnome.org>

	* mahjongg.c: Get the time from the clock.

2001-12-31  Josh Barrow  <drleary@mac.com>

	* mahjongg.c: (exit_game_callback_query):
	Temporary fix to make it exit again.

2001-12-28  Josh Barrow  <drleary@mac.com>

	* mahjongg.c: (about_callback), (main):
	GNOME is an *ACRONYM*, damnit!

2001-12-28  Josh Barrow  <drleary@mac.com>

	* mahjongg.c: (hint_cancel), (update_moves_left),
	(set_backgnd_colour), (change_tiles), (tile_event),
	(apply_preferences), (fill_tile_menu), (fill_map_menu),
	(find_tile_in_layer), (find_tile), (no_match), (check_free),
	(colour_changed_cb), (properties_callback), (hint_callback),
	(about_callback), (pause_callback), (ensure_pause_off),
	(init_game), (confirm_callback), (exit_game_callback_query),
	(exit_game_callback), (new_game_reply_callback), (restart_game),
	(redo_tile_callback), (undo_tile_callback),
	(seed_dialog_clicked_cb), (select_game), (clear_undo_queue),
	(set_map), (load_map), (canvas_x), (canvas_y), (load_images),
	(create_canvas_items), (load_tiles), (create_mahjongg_board),
	(new_game), (shuffle_tiles_callback), (main):
	Changed to compile with G_DISABLE_DEPRECATED and 
	GTK_DISABLE_DEPRECATED.  In doing this, also made it more